# rust-systre

./: Cargo.toml
examples/: display_matrix.rs  graph_properties.rs  read_spacegroup_tables.rs
src/: arithmetic.rs  lib.rs  main.rs  modular_solver.rs  parse_operator.rs  partitions.rs  pgraphs.rs  spacegroups.rs  symmetries.rs
src/arithmetic/: geometry.rs  lattices.rs  linear_algebra.rs  matrices.rs  mod.rs  modular_solver.rs
src/data/: sgtable.data
src/io/: mod.rs  parse_cgd.rs  parse_cgd_blocks.rs  parse_cgd_line.rs
src/spacegroups/: basics.rs  finder.rs  lattices.rs  mod.rs  parse_operator.rs  parse_table.rs  spacegroup_finder.rs  types.rs
