[package]
name = "rust-systre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.3"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-rational = "0.4.1"
num-traits = "0.2.15"
